<resources>
    <string name="app_name">mactrac</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">mactrac</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_day">Day</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_week">Week</string>
    <string name="menu_month">Month</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_select_today">Today</string>
    <string name="action_search">Search</string>
    <string name="action_delete_all">Delete All</string>
    <string name="date_text_placeholder">Someday, April 18</string>
    <string name="relative_day_text_placeholder">Today</string>
    <string name="total_calories_text_placeholder">xxxx Calories</string>
    <string name="total_protein_text_placeholder">XXg Protein</string>
    <string name="total_carbs_text_placeholder">XXg Carbs</string>
    <string name="total_fat_text_placeholder">XXg Fat</string>
</resources>
