<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_day">

    <fragment
        android:id="@+id/nav_day"
        android:name="chribb.mactrac.ui.day.DayFragment"
        android:label="@string/menu_day"
        tools:layout="@layout/fragment_day">
        <action
            android:id="@+id/action_nav_day_to_nav_add"
            app:destination="@id/nav_add"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_add"
        android:name="chribb.mactrac.ui.add.AddFragment"
        android:label="Add"
        tools:layout="@layout/fragment_add" >
        <argument
            android:name="day"
            app:argType="integer" />
        <action
            android:id="@+id/action_nav_add_to_nav_day"
            app:destination="@id/nav_day"
            app:popUpTo="@+id/nav_day"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_week"
        android:name="chribb.mactrac.ui.week.WeekFragment"
        android:label="@string/menu_week"
        tools:layout="@layout/fragment_week">
    </fragment>

    <fragment
        android:id="@+id/nav_month"
        android:name="chribb.mactrac.ui.month.MonthFragment"
        android:label="@string/menu_month"
        tools:layout="@layout/fragment_month">
    </fragment>


</navigation>